
New Features
---------------------

* LUCENE-10010 Introduce NFARunAutomaton to run NFA directly. (Patrick Zhai)

* LUCENE-10151 Enable timeout support in IndexSearcher. (Deepika Sharma)

Improvements
---------------------

* LUCENE-10416: Update Korean Dictionary to mecab-ko-dic-2.1.1-20180720 for Nori.
  (Uihyun Kim)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

Other
---------------------
* LUCENE-10283: The minimum required Java version was bumped from 11 to 17.
  (Adrien Grand, Uwe Schindler, Dawid Weiss, Robert Muir)

* LUCENE-10253: The @BadApple annotation has been removed from the test
  framework. (Adrien Grand)

* LUCENE-10393: Unify binary dictionary and dictionary writer in Kuromoji and Nori.
  (Tomoko Uchida, Robert Muir)

* LUCENE-10475: Merge dictionary builders in `util` package into `dict` package in Kuromoji and Nori.
  All classes in `org.apache.lucene.analysis.[ja|ko].util` was moved to `org.apache.lucene.analysis.[ja|ko].dict`.
  (Tomoko Uchida)

* LUCENE-10493: Factor out Viterbi algorithm in Kuromoji and Nori to analysis-common. (Tomoko Uchida)

* GITHUB#977, LUCENE-9500: Remove the deflater hack introduced because of JDK-8252739 (Uwe Schindler)

======================== Lucene 9.3.0 =======================

API Changes
---------------------

* LUCENE-10603: SortedSetDocValues#NO_MORE_ORDS marked @deprecated in favor of iterating with
  SortedSetDocValues#docValueCount(). (Greg Miller)

New Features
---------------------
* LUCENE-10550: Add getAllChildren functionality to facets (Yuting Gan)

* LUCENE-10274: Added facetsets module for high dimensional (hyper-rectangle) faceting
(Shai Erera, Marc D'Mello, Greg Miller)

Improvements
---------------------

* LUCENE-10078: Merge on full flush is now enabled by default with a timeout of
  500ms. (Adrien Grand)
