@@ -17,43 +17,30 @@
 package org.apache.lucene.facet.range;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+
+import org.apache.lucene.facet.FacetCountsWithFilterQuery;
 import org.apache.lucene.facet.FacetResult;
-import org.apache.lucene.facet.Facets;
 import org.apache.lucene.facet.FacetsCollector;
 import org.apache.lucene.facet.LabelAndValue;
 import org.apache.lucene.index.DocValues;
-import org.apache.lucene.index.IndexReaderContext;
 import org.apache.lucene.index.NumericDocValues;
-import org.apache.lucene.index.ReaderUtil;
 import org.apache.lucene.index.SortedNumericDocValues;
-import org.apache.lucene.search.ConjunctionUtils;
 import org.apache.lucene.search.DocIdSetIterator;
-import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.Query;
-import org.apache.lucene.search.ScoreMode;
-import org.apache.lucene.search.Scorer;
-import org.apache.lucene.search.Weight;
 
 /**
  * Base class for range faceting.
  *
  * @lucene.experimental
  */
-abstract class RangeFacetCounts extends Facets {
+abstract class RangeFacetCounts extends FacetCountsWithFilterQuery {
   /** Ranges passed to constructor. */
   protected final Range[] ranges;
 
   /** Counts, initialized in by subclass. */
   protected final int[] counts;
-
-  /**
-   * Optional: if specified, we first test this Query to see whether the document should be checked
-   * for matching ranges. If this is null, all documents are checked.
-   */
-  protected final Query fastMatchQuery;
 
   /** Our field name. */
   protected final String field;
@@ -62,40 +49,11 @@ abstract class RangeFacetCounts extends Facets {
   protected int totCount;
 
   /** Create {@code RangeFacetCounts} */
-  protected RangeFacetCounts(String field, Range[] ranges, Query fastMatchQuery)
-      throws IOException {
+  protected RangeFacetCounts(String field, Range[] ranges, Query fastMatchQuery) {
+    super(fastMatchQuery);
     this.field = field;
     this.ranges = ranges;
-    this.fastMatchQuery = fastMatchQuery;
     counts = new int[ranges.length];
-  }
-
-  /**
-   * Create a {@link org.apache.lucene.search.DocIdSetIterator} from the provided {@code hits} that
-   * relies on {@code fastMatchQuery} if available for first-pass filtering. A null response
-   * indicates no documents will match.
-   */
-  protected DocIdSetIterator createIterator(FacetsCollector.MatchingDocs hits) throws IOException {
-
-    if (fastMatchQuery != null) {
-
-      final IndexReaderContext topLevelContext = ReaderUtil.getTopLevelContext(hits.context);
-      final IndexSearcher searcher = new IndexSearcher(topLevelContext);
-      searcher.setQueryCache(null);
-      final Weight fastMatchWeight =
-          searcher.createWeight(searcher.rewrite(fastMatchQuery), ScoreMode.COMPLETE_NO_SCORES, 1);
-      final Scorer s = fastMatchWeight.scorer(hits.context);
-      if (s == null) {
-        return null; // no hits from the fastMatchQuery; return null
-      } else {
-        DocIdSetIterator fastMatchDocs = s.iterator();
-        return ConjunctionUtils.intersectIterators(
-            Arrays.asList(hits.bits.iterator(), fastMatchDocs));
-      }
-
-    } else {
-      return hits.bits.iterator();
-    }
   }
 
   protected abstract LongRange[] getLongRanges();
